// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header desktop childrenAfter 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        10 ₽
      </span>
    </h2>
  </div>
  <div>
    Logo
  </div>
</header>
`;

exports[`Header desktop childrenSubtitle 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        232 ₽
      </span>
    </h2>
    <h4
      className="YpcHeader-Subtitle"
    >
      Заказ №9031
    </h4>
  </div>
</header>
`;

exports[`Header desktop childrenTitle 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      ООО «Кусочек лета»
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        2 437 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header desktop className 1`] = `
<header
  className="YpcHeader Test"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        100 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header desktop originalPrice 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        1 432 ₽
      </span>
      <span
        className="YpcHeader-OriginalPrice"
      >
        2 000 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header desktop totalPrice 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        432 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header touch-phone childrenAfter 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        10 ₽
      </span>
    </h2>
  </div>
  <div>
    Logo
  </div>
</header>
`;

exports[`Header touch-phone childrenSubtitle 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        232 ₽
      </span>
    </h2>
    <h4
      className="YpcHeader-Subtitle"
    >
      Заказ №9031
    </h4>
  </div>
</header>
`;

exports[`Header touch-phone childrenTitle 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      ООО «Кусочек лета»
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        2 437 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header touch-phone className 1`] = `
<header
  className="YpcHeader Test"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        100 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header touch-phone originalPrice 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        1 432 ₽
      </span>
      <span
        className="YpcHeader-OriginalPrice"
      >
        2 000 ₽
      </span>
    </h2>
  </div>
</header>
`;

exports[`Header touch-phone totalPrice 1`] = `
<header
  className="YpcHeader"
>
  <div
    className="YpcHeader-Content"
  >
    <h3
      className="YpcHeader-Title"
    >
      Итого к оплате: 
    </h3>
    <h2
      className="YpcHeader-PriceGroup"
    >
      <span
        className="YpcHeader-TotalPrice"
      >
        432 ₽
      </span>
    </h2>
  </div>
</header>
`;
